--- a/index.html
+++ b/index.html
@@ -34,48 +34,29 @@
 
 <body class="sora">
     <header class="bg-gradient-to-t from-[#EFEBE3] to-blue-[#FFFFFF]">
-        <nav class="container mx-auto border-b border-first md:border-none">
-            <div class="navbar">
-                <div class="navbar-start">
-                    <div>
-                        <img src="./images/logo-header.png" alt="">
-                    </div>
+        <nav class="container mx-auto border-b border-first md:border-none py-9">
+            <div class="flex justify-between items-center">
+                <div>
+                    <img src="./images/logo-header.png" alt="">
                 </div>
-
-                <div class="navbar-center hidden lg:flex">
-                    <ul class="menu menu-horizontal px-1">
-                        <li><a>Product</a></li>
-                        <li><a>Services</a></li>
-                        <li><a>Contact Us</a></li>
+                <div class="hidden md:inline-block">
+                    <ul class="flex justify-between items-center gap-8">
+                        <li>Peoduct</li>
+                        <li>Services</li>
+                        <li>About Us</li>
                     </ul>
                 </div>
-
-                <div class="navbar-end hidden md:flex gap-6">
-                    <div class="space-x-2">
-                        <i class="fa-solid fa-magnifying-glass"></i>
+                <div class="hidden md:flex m:justify-center md:items-center gap-3">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass mr-3"></i>
                         <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                     <div>
-                        <a class="btn mr-2 bg-white border-first font-normal">Login</a>
-                        <a class="btn bg-first text-white text-xl font-normal">Register</a>
+                        <button class="btn border border-first bg-white font-normal">Login</button>
+                        <button class="btn bg-first font-normal text-white">Register</button>
                     </div>
                 </div>
-
-                <div class="dropdown ml-36 md:ml-64 lg:ml-0">
-                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                            stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M4 6h16M4 12h8m-8 6h16" />
-                        </svg>
-                    </div>
-                    <ul tabindex="0"
-                        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                        <li><a>Product</a></li>
-                        <li><a>Services</a></li>
-                        <li><a>Contact Us</a></li>
-                    </ul>
-                </div>
+                <i class="fa-solid fa-bars mr-5 text-3xl md:hidden"></i>
             </div>
         </nav>
 
@@ -134,6 +115,39 @@
                         <div class="card-body items-center text-center">
                             <h2 class="card-title">Healthy Products </h2>
                             <p>We Provide our Services 24 hour non Stop! Just make an order and you will know!!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- What to Expect -->
+        <section class="mb-24 px-10 container mx-auto">
+            <div>
+                <h3 class="text-first text-4xl font-semibold mb-10">What to Expect?</h3>
+                <div class="flex flex-col md:flex-row justify-between items-center gap-10">
+                    <div class="card bg-[#EFEBE3] shadow-xl md:w-2/3">
+                        <div class="card-body space-y-4">
+                            <h2 class="card-title font-semibold">Fresh Vegetables</h2>
+                            <p class="font-normal">We ensure you to get freshly harvested Vegetables & fruits with
+                                premium Quality.</p>
+                        </div>
+                    </div>
+
+                    <div class="card bg-[#EFEBE3] shadow-xl md:w-2/3">
+                        <div class="card-body space-y-4">
+                            <h2 class="card-title font-semibold">Justified Price</h2>
+                            <p class="font-normal">We Charge the amount of money of our services &
+                                try to charge a resonable price for our products.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card bg-[#EFEBE3] shadow-xl md:w-2/3">
+                        <div class="card-body space-y-4">
+                            <h2 class="card-title font-semibold">Special Items</h2>
+                            <p class="font-normal">We also provide some special items using fruits and Vegetables. They
+                                are unique and beneficial for health</p>
                         </div>
                     </div>
                 </div>
