--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="bg-gradient-to-t from-[#EFEBE3] to-blue-[#FFFFFF]">
         <nav class="container mx-auto border-b border-first md:border-none py-9">
             <div class="flex justify-between items-center">
-                <div>
+                <div class="pl-4">
                     <img src="./images/logo-header.png" alt="">
                 </div>
                 <div class="hidden md:inline-block">
@@ -52,7 +52,9 @@
                         <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                     <div>
-                        <button class="btn border border-first bg-white font-normal">Login</button>
+                        <button class="btn border border-first bg-white font-normal">
+                            Login
+                        </button>
                         <button class="btn bg-first font-normal text-white">Register</button>
                     </div>
                 </div>
@@ -70,7 +72,7 @@
                         you covered every day!</p>
                 </div>
                 <div>
-                    <img src="./images/hero-vegetables.png" alt="" class="w-full md:w-2/3 md:mx-auto">
+                    <img src="./images/hero-vegetables.png" alt="" class="w-full md:w-2/3 md:mx-auto animate-pulse">
                 </div>
             </div>
         </section>
@@ -84,37 +86,40 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
                     <div class="card w-full bg-[#EFEBE3]">
                         <figure class="px-10 pt-10">
-                            <div class="w-24 rounded-full bg-white">
+                            <div class="w-24 rounded-full bg-white p-5">
                                 <img src="./images/service.png" />
                             </div>
                         </figure>
                         <div class="card-body items-center text-center">
                             <h2 class="card-title">24/7 Services </h2>
-                            <p>We Provide our Services 24 hour non Stop! Just make an order and you will know!!</p>
+                            <p class="text-stone-500">We Provide our Services 24 hour non Stop! Just make an order and
+                                you will know!!</p>
                         </div>
                     </div>
 
                     <div class="card w-full bg-[#EFEBE3]">
                         <figure class="px-10 pt-10">
-                            <div class="w-24 rounded-full bg-white">
+                            <div class="w-24 rounded-full bg-white p-4">
                                 <img src="./images/delivery.png" />
                             </div>
                         </figure>
                         <div class="card-body items-center text-center">
                             <h2 class="card-title">Fast Delivery </h2>
-                            <p>We Provide our Services 24 hour non Stop! Just make an order and you will know!!</p>
+                            <p class="text-stone-500">We Provide our Services 24 hour non Stop! Just make an order and
+                                you will know!!</p>
                         </div>
                     </div>
 
                     <div class="card w-full bg-[#EFEBE3]">
                         <figure class="px-10 pt-10">
-                            <div class="w-24 rounded-full bg-white">
+                            <div class="w-24 rounded-full bg-white p-4">
                                 <img src="./images/healthy.png" />
                             </div>
                         </figure>
                         <div class="card-body items-center text-center">
                             <h2 class="card-title">Healthy Products </h2>
-                            <p>We Provide our Services 24 hour non Stop! Just make an order and you will know!!</p>
+                            <p class="text-stone-500">Our Products are one of the best products in market. We priotize
+                                our customer health</p>
                         </div>
                     </div>
                 </div>
@@ -129,7 +134,8 @@
                     <div class="card bg-[#EFEBE3] shadow-xl md:w-2/3">
                         <div class="card-body space-y-4">
                             <h2 class="card-title font-semibold">Fresh Vegetables</h2>
-                            <p class="font-normal">We ensure you to get freshly harvested Vegetables & fruits with
+                            <p class="font-normal text-stone-500">We ensure you to get freshly harvested Vegetables &
+                                fruits with
                                 premium Quality.</p>
                         </div>
                     </div>
@@ -137,7 +143,7 @@
                     <div class="card bg-[#EFEBE3] shadow-xl md:w-2/3">
                         <div class="card-body space-y-4">
                             <h2 class="card-title font-semibold">Justified Price</h2>
-                            <p class="font-normal">We Charge the amount of money of our services &
+                            <p class="font-normal text-stone-500">We Charge the amount of money of our services &
                                 try to charge a resonable price for our products.
                             </p>
                         </div>
@@ -146,7 +152,8 @@
                     <div class="card bg-[#EFEBE3] shadow-xl md:w-2/3">
                         <div class="card-body space-y-4">
                             <h2 class="card-title font-semibold">Special Items</h2>
-                            <p class="font-normal">We also provide some special items using fruits and Vegetables. They
+                            <p class="font-normal text-stone-500">We also provide some special items using fruits and
+                                Vegetables. They
                                 are unique and beneficial for health</p>
                         </div>
                     </div>
@@ -161,7 +168,7 @@
 
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <div class="bg-gradient-to-br from-[#53DB3A] to-white p-5 md:pt-7 rounded-lg relative">
-                        <div class="flex flex-col gap-2 pb-5">
+                        <div class="flex flex-col gap-2 pb-12 md:pb-5">
                             <h3 class="text-xl md:text-2xl font-semibold text-white">30% Off</h3>
                             <p class="text-base md:text-xl">Discover a world of treats,toys and essentials handpicked
                                 for
